initial commit: rearranged spring dependencies to better reflect module purpose; fixed dependency vulnerabilities

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <version.selenium>4.13.0</version.selenium>
         <version.jackson-databind>2.15.1</version.jackson-databind>
         <version.lombok>1.18.28</version.lombok>
+        <version.snake-yaml>2.0</version.snake-yaml>
     </properties>
 
     <dependencyManagement>
@@ -65,6 +66,12 @@
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-java</artifactId>
                 <version>${version.selenium}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${version.snake-yaml}</version>
             </dependency>
 
         </dependencies>
